--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,8 +1,8 @@
 @use './partials/variables' as *;
 @import 'bootstrap/scss/bootstrap';
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+$fa-font-path: '../webfonts';
+@import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '@fortawesome/fontawesome-free/scss/regular.scss';
+@import '@fortawesome/fontawesome-free/scss/solid.scss';
+@import '@fortawesome/fontawesome-free/scss/brands.scss';
